// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot with empty props 1`] = `
<div
  className=""
/>
`;

exports[`basic snapshot with required props 1`] = `
<div
  className=""
>
  CartItem({"item":"[Object]","components":"[Object]","isMiniCart":false,"isReadOnly":false})
  CartItem({"item":"[Object]","components":"[Object]","isMiniCart":false,"isReadOnly":false})
</div>
`;

exports[`basic snapshot with required props and optional prop 1`] = `
<div
  className=""
>
  CartItem({"item":"[Object]","components":"[Object]","productURLPath":"product/","isMiniCart":false,"isReadOnly":false})
  CartItem({"item":"[Object]","components":"[Object]","productURLPath":"product/","isMiniCart":false,"isReadOnly":false})
</div>
`;
